src/sections/skills/skills.scss
@import "../../global.scss";

.skills {
  background: rgb(255, 255, 255);
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;

  .sectionTitle {
    font-size: 50px;
    overflow: hidden;
    margin-bottom: 35px;

    @include mobile {
      font-size: 32px;
      // margin-bottom: 20px;
      margin: 0;
      padding-top: 20px;
      padding-bottom: 20px;
    }
  }

  .skillsCarouselContainer {
    display: flex;
    width: 80%;
    height: fit-content;
    display: flex;
    // justify-content: center;
    // align-items: center;

    .carousel.slide {
      display: flex;
      align-items: center;

      .skillItem {
        width: 60%;
        height: 100%;
        border-radius: 30px;
        display: flex;
        flex-direction: column;
        margin: 30px auto;
        padding: 30px;
        background-color: rgb(255, 255, 255);
        box-shadow: 0 2px 10px 0 rgba(51, 122, 114, 0.15),
          0 6px 20px 0 rgba(51, 122, 114, 0.1);

        @include mobile {
          padding: 20px;
          width: 90%;
        }

        .topWrapper {
          display: flex;
          flex-direction: row;
          justify-content: center;
          align-items: center;
          margin-bottom: 15px;

          .skillName {
            font-size: 35px;
            margin: 0;

            @include mobile {
              font-size: 25px;
            }
          }

          .skillIcon {
            width: 35px;
            height: 35px;
            margin: auto 15px;
            @include mobile {
              width: 25px;
              height: 25px;
            }
          }
        }

        .bottomWrapper {
          @include mobile {
            font-size: 15px;
          }
          .skillDescription {
            margin-bottom: 15px;
            height: fit-content;
          }
          .skillProjectsUsedIn {
            margin-bottom: 15px;
            height: fit-content;
          }
          .skillExperiance {
            margin: 0;
            min-height: 50px;
            overflow: hidden;
            .experianceProgressBar {
              min-height: fit-content;
              overflow: hidden;
              margin-top: 15px;
              border-radius: 40px;
            }
          }
        }
      }
    }
  }

  .previousButton {
    transform: rotate(90deg);
    width: 40px;
    opacity: 1;
  }

  .nextButton {
    transform: rotate(270deg);
    width: 40px;
    opacity: 1;
    // margin-left: 500px;
  }

  .indicatorRect {
    background-color: black;
    opacity: 1;
  }

  .carousel-control-next {
    width: fit-content;
    height: fit-content;
    margin: auto;
    @include mobile {
      display: none;
    }
  }

  .carousel-control-prev {
    width: fit-content;
    height: fit-content;
    margin: auto;
    @include mobile {
      display: none;
    }
  }

  .carousel-item {
    width: 100%;
  }
}

